--- a/main.html
+++ b/main.html
@@ -7,7 +7,33 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<table>
+		<tr>
+		    <th>item</th>
+			<th>price</th>
+			<th>quantity</th>
+		</tr>
+		<tr>
+			<th>banana</th>
+			<td>$1.00</td>
+			<td>3</td>
+		</tr>
+		<tr>
+			<th>burger</th>
+			<td>$6.90</td>
+			<td>1</td>
+		</tr>
+		<tr>
+			<th>cookie</th>
+			<td>$4.20</td>
+			<td>4</td>
+		</tr>
+		<tr>
+			<th>total</th>
+			<td>$12.10</td>
+			<td>8</td>
+		</tr>
+	</table><!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
 
