--- a/main.html
+++ b/main.html
@@ -9,27 +9,27 @@
 <body>
 	<table>
 		<tr>
-		    <th>item</th>
-			<th>price</th>
-			<th>quantity</th>
+		    <th>Item</th>
+			<th>Price</th>
+			<th>Quantity</th>
 		</tr>
 		<tr>
-			<th>banana</th>
+			<th>Banana</th>
 			<td>$1.00</td>
 			<td>3</td>
 		</tr>
 		<tr>
-			<th>burger</th>
+			<th>Burger</th>
 			<td>$6.90</td>
 			<td>1</td>
 		</tr>
 		<tr>
-			<th>cookie</th>
+			<th>Cookie</th>
 			<td>$4.20</td>
 			<td>4</td>
 		</tr>
 		<tr>
-			<th>total</th>
+			<th>Total</th>
 			<td>$12.10</td>
 			<td>8</td>
 		</tr>
