--- a/main.html
+++ b/main.html
@@ -9,11 +9,13 @@
 <body>
 	<p>implement an item cart in HTML with the following static data:</p>
 	<table>
+		<thead>
 		<tr>
 		    <th>Item</th>
 			<th>Price</th>
 			<th>Quantity</th>
 		</tr>
+		</thead>	
 		<tr>
 			<th>Banana</th>
 			<td>$1.00</td>
